2002-07-26  Peter Osterlund  <petero2@telia.com>

	* (p4-current-client): If the p4-current-client function can't get
	  the current client name from the environment or the $P4CONFIG
	  file, use "p4 info" to retrieve the information. This is slower
	  but more robust, because p4 makes up a default client name from
	  the host name if not defined in the environment. Previously,
	  p4.el couldn't figure out what the default client name was,
	  which made it fail in subtle ways.

	* (p4-client): When opening a client buffer, if there is no
	  description field, go to the view field instead. From Andre
	  Srinivasan.

	* (p4-empty-diff-p): Optimized so that it doesn't produce so much
	   p4 server load.

	* (p4-is-vc): Speeded up significantly when there are many (>3000)
	  opened files.

	* (p4-empty-diff-p): Optimized for speed. The p4-read-depot-output
	  function is much slower than a more direct "(while
	  (re-search-forward " approach.

	* (p4-save-opened-files): Optimized by not using the
	  p4-read-depot-output function.

	* (p4-get-add-branch-files): Optimized by not using the
	  p4-read-depot-output function.

2002-07-25  Peter Osterlund  <petero2@telia.com>

	* (p4-menu-def): Reordered code blocks to make xemacs work
	  correctly.

	* (p4-activate-diff-buffer): Simplified regexp to avoid regexp
	  stack overflow when there are a lot of changes in the same
	  file.

	* Fixed problem when switching between different clients using the
	  $P4CONFIG facility. When executing some p4.el commands, an old
	  p4-output-buffer was not deleted, which had the effect that some
	  p4 commands were executed with the wrong current directory.

	* Smarter searching for the p4 executable. Searches all
	  directories in the standard search path. Searches for p4.exe if
	  running in windows.

	* (p4-print-with-rev-history-int): Fixed type conversion bug
	  exposed by emacs 21.2.1.

	* (p4-get-add-branch-files), (p4-get-have-files), (p4-is-vc):