@@ -1,3 +1,9 @@
+2002-07-26  Rajesh Vaidheeswarran <rv@dsmit.com>
+
+	* (p4-version): First Sourceforge release - 10.0
+
+	* (p4-maintainer): Change to New sourceforge mailing address
+
 2002-07-26  Peter Osterlund  <petero2@telia.com>
 
 	* (p4-current-client): If the p4-current-client function can't get
